Create repository layer, add dagger, refactoring

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="background_dark">#1E1E1E</color>
+    <color name="search_background">#24252A</color>
+    <color name="navigation_background">#24252A</color>
+    <color name="white">#FFFFFF</color>
 </resources>
