--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -52,7 +52,7 @@
         android:id="@+id/track_extra_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:layout_marginStart="@dimen/padding_small"
         android:src="@drawable/ic_downloaded"
         android:contentDescription="@string/downloaded"
