--- a/app/src/main/res/layout/fragment_downloaded_tracks.xml
+++ b/app/src/main/res/layout/fragment_downloaded_tracks.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/background_dark">
+    android:background="@color/background_dark"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/search_card"
@@ -17,21 +18,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="@dimen/margin_standard"
         android:elevation="4dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="@dimen/padding_standard"
             android:gravity="center_vertical">
-
             <ImageView
                 android:id="@+id/search_icon"
                 android:layout_width="@dimen/search_icon_width"
                 android:layout_height="@dimen/search_icon_height"
                 android:src="@drawable/ic_search"
-            android:contentDescription="@string/search" />
-
+                android:contentDescription="@string/search" />
             <EditText
                 android:id="@+id/search_edit_text"
                 android:layout_width="0dp"
@@ -43,7 +41,6 @@
                 android:textColor="@color/white"
                 android:inputType="text"
                 android:layout_weight="1"/>
-
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -58,8 +55,7 @@
         app:layout_constraintBottom_toTopOf="@+id/navigation_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/track_item"
-        />
+        tools:listitem="@layout/track_item" />
 
     <LinearLayout
         android:id="@+id/navigation_container"
@@ -110,7 +106,7 @@
                 android:layout_width="@dimen/nav_icon_width"
                 android:layout_height="@dimen/nav_icon_height"
                 android:src="@drawable/ic_downloaded"
-            android:contentDescription="@string/downloaded" />
+                android:contentDescription="@string/downloaded" />
 
             <TextView
                 android:id="@+id/nav_downloaded_text"
