--- a/app/src/main/res/layout/fragment_play_track.xml
+++ b/app/src/main/res/layout/fragment_play_track.xml
@@ -1,30 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_dark">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/coverCardView"
+    <ImageView
+        android:id="@+id/coverImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="@dimen/margin_top_player"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/infoContainer"
         app:layout_constraintDimensionRatio="1:1"
-        app:cardCornerRadius="@dimen/search_card_corner_radius"
-        app:cardElevation="8dp">
-        <ImageView
-            android:id="@+id/coverImageView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/track_cover"/>
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintBottom_toTopOf="@id/infoContainer"
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/track_cover"/>
 
     <LinearLayout
         android:id="@+id/infoContainer"
@@ -33,7 +25,7 @@
         android:orientation="vertical"
         android:paddingHorizontal="@dimen/padding_standard"
         android:paddingVertical="@dimen/padding_small"
-        app:layout_constraintTop_toBottomOf="@id/coverCardView"
+        app:layout_constraintTop_toBottomOf="@id/coverImageView"
         android:layout_marginTop="-8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
