--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -23,10 +23,10 @@
         android:id="@+id/track_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_small"
         android:text="@string/track_title"
         android:textColor="@android:color/white"
-        android:textSize="16sp"
+        android:textSize="@dimen/title_track_size"
         android:ellipsize="end"
         android:maxLines="1"
         app:layout_constraintStart_toEndOf="@id/track_picture"
@@ -37,10 +37,10 @@
         android:id="@+id/track_artist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="@dimen/margin_small"
         android:text="@string/artist_name"
-        android:textColor="#B0B0B0"
-        android:textSize="14sp"
+        android:textColor="@color/gray"
+        android:textSize="@dimen/name_artist_size"
         android:ellipsize="end"
         android:maxLines="1"
         app:layout_constraintStart_toStartOf="@id/track_title"
@@ -50,8 +50,8 @@
 
     <ImageView
         android:id="@+id/track_extra_icon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="@dimen/track_extra_icon_width"
+        android:layout_height="@dimen/track_extra_icon_height"
         android:visibility="visible"
         android:layout_marginStart="@dimen/padding_small"
         android:src="@drawable/ic_downloaded"
