finished the search function in TracksListFragment, adding click animation

--- a/app/src/main/res/layout/fragment_tracks_list.xml
+++ b/app/src/main/res/layout/fragment_tracks_list.xml
@@ -79,6 +79,9 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/ripple_custom"
             android:gravity="center"
             android:padding="@dimen/padding_small">
 
@@ -103,8 +106,13 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+
             android:gravity="center"
-            android:padding="@dimen/padding_small">
+            android:padding="@dimen/padding_small"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="@drawable/ripple_custom">
+
 
             <ImageView
                 android:id="@+id/nav_downloaded_icon"
