--- a/app/src/main/res/layout/track_item.xml
+++ b/app/src/main/res/layout/track_item.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="@dimen/padding_standard"
-    android:background="@color/search_background">
+    android:background="@drawable/ripple_custom"
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/track_picture"
