--- a/app/src/main/res/layout/activity_tracks_list.xml
+++ b/app/src/main/res/layout/activity_tracks_list.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/nav_host_fragment"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:id="@+id/host_fragment_container"
+        android:name="com.example.musicapp.presentation.ui.fragments.HostFragment"
         app:navGraph="@navigation/nav_graph"
         app:defaultNavHost="true"
         android:layout_width="0dp"
