--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -2,8 +2,12 @@
 <resources>
 
     <style name="MyAlertDialogStyle" parent="ThemeOverlay.AppCompat.Dialog.Alert">
-        <item name="android:background">#24252A</item>
-        <item name="android:textColorPrimary">#FFFFFF</item>
+        <item name="android:background">@color/search_background</item>
+        <item name="android:textColorPrimary">@color/white</item>
+    </style>
+
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/background_dark</item>
     </style>
 
 </resources>
